Fixed editing, deleting and adding links

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
         <datalist id="linkGroupSelect">
           <option value="Ungrouped">Ungrouped</option>
         </datalist>
-        <button id="special-button-for-link"></button>
+        <button id="edit-link-button"></button>
+        <button id="delete-link-button">Delete</button>
       </div>
     </section>
   </body>
